manifest/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: qwe123qwe
          image: mariadb:latest
          name: mariadb
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
      # volumes:
      #   - name: mariadb-data
      #     persistentVolumeClaim:
      #       claimName: mariadb-data-pvc
status: {}
